--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,20 @@ small {
   border-right: solid 2px white;
 }
 
+span#hamburger {
+  font-size: 5rem;
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 1%;
+  text-decoration: none;
+}
+
+span.hamburger {
+  position: fixed;
+  text-decoration: none;
+}
+
 #canvas {
   width: 100%;
   height: 100%;
