--- a/styles/style.css
+++ b/styles/style.css
@@ -120,6 +120,20 @@ span.hamburger {
           filter: blur(10px);
 }
 
+/*
+* loading canvas
+*/
+
+canvas#loading_canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 9999;
+  background-color: #000;
+}
+
 @media screen and (min-width: 48rem) {
   br.return {
     display: none;
