--- a/pattern/styles/style.css
+++ b/pattern/styles/style.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 /********************
   fadeIn
 ********************/
@@ -49,7 +42,7 @@
 
 html, body {
   margin: 0 auto;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   color: white;
   background: black;
@@ -97,10 +90,9 @@ header {
           transform: translateY(-50%);
 }
 
-/*
+/**
 * Referenced https://www.terakoya.work/link-hover-line-css-animation/
 */
-
 header a {
   position: relative;
   color: white;
