--- a/pattern/styles/style.css
+++ b/pattern/styles/style.css
@@ -231,6 +231,10 @@ main > ul > li > a > img {
   transition: opacity 0.8s, transform 0.8s;
 }
 
+main > ul > li > a > img:not(:hover) {
+  opacity: 0.5;
+}
+
 .show {
   opacity: 1;
   transform: none;
