--- a/sketchWithCode/styles/style.css
+++ b/sketchWithCode/styles/style.css
@@ -8,6 +8,8 @@ body {
 #container {
   overflow: hidden;
   opacity: 0;
+  -webkit-transition: opacity 1.6s;
+  -o-transition: opacity 1.6s;
   transition: opacity 1.6s;
 }
 #container.jsShowContainer {
@@ -15,6 +17,8 @@ body {
 }
 
 a {
+  -webkit-transition: 0.4s color;
+  -o-transition: 0.4s color;
   transition: 0.4s color;
 }
 a, a:visited {
@@ -52,7 +56,8 @@ h2 {
  */
 main {
   background: rgba(0, 0, 0, 0.9);
-  box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.4);
   color: #FFF;
   font-size: 0.8rem;
   line-height: 1.6rem;
@@ -61,6 +66,8 @@ main {
   top: 100%;
   width: 100%;
   height: 50%;
+  -webkit-transition: opacity 0.4s, top 0.4s;
+  -o-transition: opacity 0.4s, top 0.4s;
   transition: opacity 0.4s, top 0.4s;
   z-index: 9999;
 }
@@ -92,6 +99,8 @@ main {
   color: #000;
   background: #FFF;
   padding: 8px;
+  -webkit-transition: background 0.4s;
+  -o-transition: background 0.4s;
   transition: background 0.4s;
 }
 #jsClose:hover {
@@ -109,10 +118,14 @@ main {
   pointer-events: none;
 }
 #jsClose::before {
-  transform: translate(-50%, -50%) rotate(45deg);
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+      -ms-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
 }
 #jsClose::after {
-  transform: translate(-50%, -50%) rotate(-45deg);
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+      -ms-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
 }
 #jsClose a {
   display: block;
@@ -129,6 +142,8 @@ h3 {
 }
 
 .downloadLink a {
+  -webkit-transition: color 0.4s;
+  -o-transition: color 0.4s;
   transition: color 0.4s;
 }
 .downloadLink:hover a {
@@ -149,11 +164,19 @@ h3 {
   padding: 16px;
   background: #FFF;
   color: #000;
-  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: background 0.4s, -webkit-transform 0.4s;
+  transition: background 0.4s, -webkit-transform 0.4s;
+  -o-transition: transform 0.4s, background 0.4s;
   transition: transform 0.4s, background 0.4s;
+  transition: transform 0.4s, background 0.4s, -webkit-transform 0.4s;
 }
 #jsCodeOne:hover + .copied {
-  transform: none;  
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none;  
 }
 #jsCodeOne:active {
   background: rgba(0, 0, 0, 0.8);
@@ -192,11 +215,16 @@ small {
   position: fixed;
   top: -50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 50%;
   height: 50%;
   opacity: 0;
-  box-shadow: 0 0 5px #000;
+  -webkit-box-shadow: 0 0 5px #000;
+          box-shadow: 0 0 5px #000;
+  -webkit-transition: top 0.4s, opacity 0.8s, left 0.4s;
+  -o-transition: top 0.4s, opacity 0.8s, left 0.4s;
   transition: top 0.4s, opacity 0.8s, left 0.4s;
 }
 #jsImageFrame.jsSlideIn {
