--- a/sketchWithCode/styles/loadingStyle.css
+++ b/sketchWithCode/styles/loadingStyle.css
@@ -13,6 +13,8 @@
  * at the loading animation
  */
 #jsLoadingFrame {
+  z-index: 9999;
+  background: #FFF;
   font-size: 16px;
   position: fixed;
   width: 100%;
