--- a/sketchWithCode/styles/style.css
+++ b/sketchWithCode/styles/style.css
@@ -65,6 +65,7 @@ main {
   line-height: 1.6rem;
   position: fixed;
   overflow-y: scroll;
+  overflow-x: hidden;
   top: 100%;
   width: 100%;
   height: 50%;
