--- a/sketchWithCode/styles/style.css
+++ b/sketchWithCode/styles/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 
+html, body{
+  height: 100%;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 62.5%;
@@ -8,14 +12,19 @@ body {
 
 #container {
   visibility: hidden;
+  top: -100%;
+  width: 100%;
+  height: 100%;
   opacity: 0;
-  -webkit-transition: visibility 1.6s, opacity 1.6s;
-  -o-transition: visibility 1.6s, opacity 1.6s;
-  transition: visibility 1.6s, opacity 1.6s;
+  -webkit-transition: top 1.6s, visibility 1.6s, opacity 1.6s;
+  -o-transition: top 1.6s, visibility 1.6s, opacity 1.6s;
+  transition: top 1.6s, visibility 1.6s, opacity 1.6s;
+  position: relative;
 }
 #container.jsShowContainer {
   visibility: visible;
   opacity: 1;
+  top: 0;
 }
 
 a {
@@ -39,7 +48,7 @@ a:hover {
  * header
  */
 header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   padding: 32px;
@@ -195,7 +204,7 @@ h3 {
  * navigation
  */
 nav {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   padding: 32px;
@@ -210,7 +219,7 @@ nav ul li {
  * footer
  */
 footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   right: 0;
   padding: 32px;
@@ -269,6 +278,10 @@ small {
   bottom: 0;
   width: 50px;
   background: #000;
+}
+
+#inputImage {
+  visibility: hidden;
 }
 
 @media (min-width: 500px) {
