--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@ html {
 html,
 body {
   height: 100%;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -60,6 +61,7 @@ ul {
 
 .container {
   height: 100%;
+  width: 100%;
   overflow: hidden;
   max-width: 768px;
   margin: 0 auto;
@@ -258,6 +260,7 @@ h1 {
 ********************/
 main {
   height: 50%;
+  width: 100%;
   position: relative;
 }
 
