--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,6 @@ html {
 html,
 body {
   height: 100%;
-  width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -61,7 +60,6 @@ ul {
 
 .container {
   height: 100%;
-  width: 100%;
   overflow: hidden;
   max-width: 768px;
   margin: 0 auto;
@@ -152,7 +150,6 @@ canvas {
 header {
   position: relative;
   height: 50%;
-  width: 100%;
 }
 
 h1 {
@@ -259,10 +256,8 @@ h1 {
 /********************
  * main
 ********************/
-main {
-  display: block;
+.main {
   height: 50%;
-  width: 100%;
   position: relative;
 }
 
