--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@ html {
 html,
 body {
   height: 100%;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -65,6 +66,7 @@ ul {
 
 .container {
   height: 100%;
+  width: 100%;
   overflow: hidden;
   max-width: 768px;
   margin: 0 auto;
@@ -155,6 +157,7 @@ canvas {
 header {
   position: relative;
   height: 50%;
+  width: 100%;
 }
 
 h1 {
@@ -263,6 +266,7 @@ h1 {
 ********************/
 .main {
   height: 50%;
+  width: 100%;
   position: relative;
 }
 
