--- a/styles/trashes.css
+++ b/styles/trashes.css
@@ -136,7 +136,7 @@ nav {
 }
 
 ol li {
-  padding: 16px 0;
+  padding: 24px 0;
   list-style-type: none;
 }
 
@@ -157,6 +157,11 @@ ol li {
 
 .active a svg {
   stroke: tomato;
+}
+
+#counter {
+transform: rotate(90deg);
+  font-size: 16px;
 }
 
 footer {
