--- a/styles/trashes.css
+++ b/styles/trashes.css
@@ -172,7 +172,9 @@ a.active svg {
 }
 
 #counter {
-transform: rotate(90deg);
+-webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+        transform: rotate(90deg);
   font-size: 16px;
 }
 
